Separate layout into components

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,6 +26,6 @@ body {
   --positive-tile: #dfd;
   --negative-tile: #fdd;
 
-  --header-height: 10vh;
-  --footer-height: 10vh;
+  --header-height: 50px;
+  --footer-height: 48px;
 }
