--- a/components/Layout/Header/header.module.scss
+++ b/components/Layout/Header/header.module.scss
@@ -19,7 +19,8 @@
       transform: scale(1.01);
     }
 
-    .title, svg {
+    .title,
+    svg {
       font-size: 1.5rem;
       margin: 0;
     }
@@ -31,10 +32,6 @@
     list-style: none;
 
     .opc {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
       width: 120px;
       transition: 0.2s;
 
@@ -43,14 +40,20 @@
         cursor: pointer;
 
         .link {
-          transform: scale(1.01);
+          transform: scale(1.02);
         }
       }
 
       .link {
-        color: var(--text-primary);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
         text-decoration: none;
         font-weight: 500;
+        color: var(--text-primary);
       }
     }
   }
