--- a/components/Layout/Header/header.module.scss
+++ b/components/Layout/Header/header.module.scss
@@ -26,13 +26,13 @@
     }
   }
 
-  .navbar {
+  ul {
     display: flex;
     margin: 0;
     list-style: none;
 
-    .opc {
-      width: 120px;
+    li {
+      width: 80px;
       transition: 0.2s;
 
       &:hover {
@@ -49,11 +49,19 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 4px;
         width: 100%;
         height: 100%;
         text-decoration: none;
         font-weight: 500;
         color: var(--text-primary);
+
+        .itemIcon {
+          font-size: large;
+        }
+        span {
+          font-size: small;
+        }
       }
     }
   }
